hphp/hack/test/typecheck/noreturn_typedef.php.exp
File "noreturn_typedef.php", line 4, characters 15-22:
You can only use the `noreturn` type as the return type of a function or method (Naming[2063])
