hphp/hack/test/typecheck/noreturn_typedef.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

type talias = noreturn;
